--- a/landscape.yml
+++ b/landscape.yml
@@ -1662,6 +1662,14 @@ landscape:
             logo: hazelcast.svg
             crunchbase: 'https://www.crunchbase.com/organization/hazelcast'
           - item:
+            name: HyScale Tool
+            description: >-
+              Hyscale Tool is an Application abstraction Framework over kubernetes.
+            homepage_url: 'https://www.hyscale.io/'
+            repo_url: 'https://github.com/hyscale/hyscale'
+            logo: hyscale.svg
+            crunchbase: 'https://www.crunchbase.com/organization/hyscale' 
+          - item:
             name: IBM Db2
             description: >-
               IBM Db2® is a family of hybrid data management products offering a complete suite of AI empowered capabilities designed to help you manage both
@@ -2459,6 +2467,8 @@ landscape:
             crunchbase: 'https://www.crunchbase.com/organization/harness-512d'
           - item:
             name: HyScale
+            description: >-
+              The end-to-end deployment management and control platform for multi-cloud Kubernetes.
             homepage_url: 'https://www.hyscale.io/'
             logo: hyscale.svg
             crunchbase: 'https://www.crunchbase.com/organization/hyscale'
